<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">Track-Fit</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_waktu">Waktu</string>
    <string name="waktu">0:00:00</string>
    <string name="title_kecepatan">Kecepatan</string>
    <string name="kecepatan">5,2 km/h</string>
    <string name="title_jarak">Jarak</string>
    <string name="jarak">3.4 km</string>
    <string name="appsTitle">Track-fit</string>
    <string name="title_activity_tracking">Tracking</string>
    <string name="title_activity_graph">Graph</string>
    <string name="title_activity_history">History</string>
    <string name="imageDesc">gambar</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_sports_picker">SportsPicker</string>
    <string name="title_activity_set_goals">SetGoals</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_select_sport">asdasd</string>
    <string name="home_activity">Your last activity is</string>
    <string name="home_no_activity">You haven\'t done any activities</string>
    <string name="home_hello">Hello, Unnamed!</string>
    <string name="activity_image">Activity Image</string>
    <string name="activity_history">Your activity history</string>
    <string name="name">Name</string>
    <string name="insert_name">Insert Your Name</string>
    <string name="age">Age</string>
    <string name="insert_age">Insert Your Age</string>
    <string name="weight">Weight (in kg)</string>
    <string name="insert_weight">Your Weight</string>
    <string name="height">Height (in cm)</string>
    <string name="insert_height">Your Height</string>
    <string name="confirm">Confirm</string>
    <string name="bodyMass">Body Mass</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_menu_dash_cal">MenuDashCal</string>
    <string name="title_activity_menu_dash_speed">MenuDashSpeed</string>
    <string name="title_activity_menu_dash_time">MenuDashTime</string>
    <string name="pick_activity">Pick your activity:</string>
    <string name="walking">Walking</string>
    <string name="running">Running</string>
    <string name="cycling">Cycling</string>
    <string name="next">Next</string>
    <string name="share_title">Confirm share:</string>
    <string name="share_content">Do you want to share this activity?</string>
    <string name="title_activity_share_pop_up">SharePopUp</string>

</resources>
