<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/cream"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".SportsPicker" >

            <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_activity"
            android:textSize="30sp"
	        android:textColor="@color/red"
	        android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radioGroupSportsPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
            <RadioButton
	            android:id="@+id/radioButtonWalking"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/walking"
	            android:textSize="20sp"
	            android:textColor="@color/red"
	            android:textStyle="bold" />
	
	        <RadioButton
	            android:id="@+id/radioButtonRunning"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/running"
	            android:textSize="20sp"
	            android:textColor="@color/red"
	            android:textStyle="bold" />
	
	        <RadioButton
	            android:id="@+id/radioButtonCycling"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/cycling"
	            android:textSize="20sp"
	            android:textColor="@color/red"
	            android:textStyle="bold" />
        </RadioGroup>

        

        <Button
            android:id="@+id/buttonConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:background="@color/red"
            android:padding="10dp"
            android:layout_margin="10dp" />
    </LinearLayout>