<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuProfile"
    android:background="@color/cream" >

    <LinearLayout
        android:id="@+id/Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/red" >
        <include layout="@layout/header" />
    </LinearLayout>
	 <FrameLayout
	        android:id="@+id/FrameTitle"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/Header"
	        android:paddingTop="5sp" >
	
	        <TextView
	            android:id="@+id/Title"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            android:text="@string/title_activity_profile"
	            android:textSize="25sp" />
	
	    </FrameLayout>
	    
	  

	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentRight="true"
	        android:layout_below="@+id/FrameTitle"
	        android:orientation="vertical" >

	        <TextView
	            android:id="@+id/textViewName"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:padding="5dp"
	            android:text="@string/name"
	            android:textSize="20sp"/>

	        <EditText
	            android:id="@+id/editTextName"
	            android:hint="@string/insert_name"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:padding="5dp"
	            android:layout_marginLeft="5dp"
	            android:layout_marginRight="5dp"
	            android:layout_marginBottom="5dp" >

	            <requestFocus />
	        </EditText>

	        <TextView
	            android:id="@+id/textViewAge"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:padding="5dp"
	            android:text="@string/age"
	            android:textSize="20sp" />

	        <EditText
	            android:id="@+id/editTextAge"
	            android:hint="@string/insert_age"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:padding="5dp"
	            android:inputType="number"
	            android:layout_marginLeft="5dp"
	            android:layout_marginRight="5dp"
	            android:layout_marginBottom="5dp" />

	        <LinearLayout
	            android:baselineAligned="false"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content" >

	            <LinearLayout
	                android:layout_width="wrap_content"
	                android:layout_height="match_parent"
	                android:layout_weight="0.5"
	                android:orientation="vertical" >

	                <TextView
	                    android:id="@+id/textViewWeight"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:padding="5dp"
	                    android:text="@string/weight"
	                    android:textSize="20sp" />

	                <EditText
	                    android:id="@+id/editTextWeight"
	                    android:layout_width="match_parent"
	                    android:layout_height="wrap_content"
	                    android:layout_marginBottom="5dp"
	                    android:layout_marginLeft="5dp"
	                    android:layout_marginRight="5dp"
	                    android:ems="10"
	                    android:hint="@string/insert_weight"
	                    android:inputType="number"
	                    android:padding="5dp" />
	            </LinearLayout>

	            <LinearLayout
	                android:layout_width="wrap_content"
	                android:layout_height="match_parent"
	                android:layout_weight="0.5"
	                android:orientation="vertical" >

	                <TextView
	                    android:id="@+id/textViewHeight"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:padding="5dp"
	                    android:text="@string/height"
	                    android:textSize="20sp" />

	                <EditText
	                    android:id="@+id/editTextHeight"
	                    android:layout_width="match_parent"
	                    android:layout_height="wrap_content"
	                    android:layout_marginBottom="5dp"
	                    android:layout_marginLeft="5dp"
	                    android:layout_marginRight="5dp"
	                    android:ems="10"
	                    android:hint="@string/insert_height"
	                    android:inputType="number"
	                    android:padding="5dp" />
	            </LinearLayout>

	        </LinearLayout>

	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content" >

	            <Button
	                android:id="@+id/buttonConfirm"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_margin="5dp"
	                android:background="@color/red"
	                android:padding="10dp"
	                android:layout_weight="0.5"
	                android:text="@string/confirm"
	                android:textColor="@color/white"
	                android:textSize="25sp"
	                style="?android:attr/buttonBarButtonStyle" />
	            
	            <Button
	                android:id="@+id/buttonBodyMass"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_margin="5dp"
	                android:background="@color/red"
	                android:padding="10dp"
	                android:layout_weight="0.5"
	                android:text="@string/bodyMass"
	                android:textColor="@color/white"
	                android:textSize="25sp"
	                style="?android:attr/buttonBarButtonStyle" />

	        </LinearLayout>

	    </LinearLayout>
	    
	     <RelativeLayout 
        android:id="@+id/Footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
   		<include 
   		    layout="@layout/footer"
   		    android:layout_alignParentBottom="true" />
    </RelativeLayout>
	    
</RelativeLayout>
