<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/cream"
    android:padding="5dp"
    tools:context=".SharePopUp" >

    <TextView
            android:id="@+id/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_title"
            android:textSize="30sp"
	        android:textColor="@color/red"
	        android:textStyle="bold" />

        <TextView
            android:id="@+id/Content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_content"
            android:textColor="@color/red"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" >

            <Button
                android:id="@+id/yesButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:layout_weight="0.5"
                android:textSize="25sp"
                android:layout_margin="2dp"
	            android:textColor="@color/white"
	            android:background="@color/red"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/noButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:layout_weight="0.5"
                android:layout_margin="2dp"
                android:textSize="25sp"
	            android:textColor="@color/white"
	            android:background="@color/red"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

</LinearLayout>
