<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuHome" 
    android:background="@color/cream">
    
     <LinearLayout
        android:id="@+id/Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/red" >
        <include layout="@layout/header" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Header"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_hello"
            android:padding="10dp"
            android:textSize="30sp"
            android:gravity="center" />

        <TextView
            android:id="@+id/home_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_no_activity"
            android:padding="10dp"
            android:textSize="20sp"
            android:gravity="center" />

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@color/light_pink" >

            <ImageView
                android:id="@+id/activityImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/activity_image"
                android:src="@drawable/sports_regular_biking_icon" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/distanceTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textSize="20sp"
                    android:text="2.3 km in 0:30:00" />

                <TextView
                    android:id="@+id/calorie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textSize="15sp"
                    android:text="243 kcal" />

                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textSize="15sp"
                    android:text="21/1/2001" />

            </LinearLayout>

        </LinearLayout>
        
      
    </LinearLayout>
    
    <RelativeLayout 
        android:id="@+id/Footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
   		<include 
   		    layout="@layout/footer"
   		    android:layout_alignParentBottom="true" />
    </RelativeLayout>

</RelativeLayout>
